# mask

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  aeag_mask.py  genindex.html  help.html  index.html  layerlist.py  maindialog.py  mask_filter.py  metadata.txt  objects.inv  search.html  searchindex.js  setup.cfg  ui_plugin_mask.ui
.doctrees/: environment.pickle  index.doctree
.github/workflows/: doc2pages.yml  linter.yml  release.yml
_sources/: index.md.txt
_static/: documentation_options.js
docs/: conf.py  index.md
mask/: Makefile  __init__.py  aeag_mask.py  default_mask_style.qml  deploy.sh  htmldialog.py  layerlist.py  maindialog.py  mask_filter.py  mask_fr.qm  mask_fr.ts  mask_parameters.py  metadata.txt  resources_rc.py  resources_rc.qrc  style_tools.py  ui_layer_list.py  ui_layer_list.ui  ui_plugin_mask.py
mask/doc/: index-en.html  index-fr.html
mask/doc/en/: about.html  tips.html
mask/doc/fr/: about.html  tips.html
mask/i18n/: fr.qm  fr.ts
mask/logic/: mask_filter.py  mask_parameters.py  style_tools.py  utils.py
mask/resources/: default_mask_style.qml
mask/ui/: layerlist.py  maindialog.py  ui_layer_list.ui  ui_plugin_mask.py  ui_plugin_mask.ui
mask_plugin/: Makefile  aeag_mask.py  aeag_mask.xcf  default_mask_style.qml  layerlist.py  maindialog.py  mask_filter.py  mask_fr.ts  mask_parameters.py  metadata.txt  resources_rc.py  resources_rc.qrc  style_tools.py  ui_layer_list.py  ui_layer_list.ui  ui_plugin_mask.py  ui_plugin_mask.ui
requirements/: development.txt  documentation.txt  packaging.txt
