# -- Packaging --------------------------------------
[metadata]
description-file = README.md

[qgis-plugin-ci]
plugin_path = mask
github_organization_slug = aeag
project_slug = mask

# -- Code quality ------------------------------------
[flake8]
count = True
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # The old directory contains Flake8 2.0
    old,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist,
    # This contains local virtual environments
    .venv*,
    # do not watch on tests
    tests,
    # do not consider external packages
    */external/*, ext_libs/*
ignore = E121,E123,E126,E203,E226,E24,E704,W503,W504
max-complexity = 15
max-doc-length = 130
max-line-length = 100
output-file = dev_flake8_report.txt
statistics = True
tee = True

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[coverage:run]
branch = True
include =
    nominatim/*
omit =
    .venv/*
    *tests*

[coverage:report]
exclude_lines =
    if self.debug:
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:

ignore_errors = True
show_missing = True
